--- a/package.json
+++ b/package.json
@@ -1,19 +1,17 @@
 {
   "name": "tmdb-proxy",
   "version": "1.0.0",
-  "main": "index.js",
+  "type": "module",
+  "private": true,
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "dev": "vercel dev",
+    "deploy": "vercel deploy"
   },
-  "keywords": [],
-  "author": "",
-  "license": "ISC",
-  "description": "",
   "dependencies": {
-    "@upstash/redis": "^1.34.3",
-    "axios": "^1.7.9"
+    "axios": "^1.6.2",
+    "@upstash/redis": "^1.28.4"
   },
   "devDependencies": {
-    "vercel": "^32.3.0"
+    "vercel": "^32.5.5"
   }
 }
