--- a/package.json
+++ b/package.json
@@ -5,13 +5,16 @@
   "private": true,
   "scripts": {
     "dev": "vercel dev",
-    "deploy": "vercel deploy"
+    "deploy": "vercel deploy",
+    "test": "vitest",
+    "test:watch": "vitest watch"
   },
   "dependencies": {
-    "axios": "^1.6.2",
-    "@upstash/redis": "^1.28.4"
+    "axios": "^1.6.2"
   },
   "devDependencies": {
+    "vitest": "^1.2.0",
+    "msw": "^2.0.0",
     "vercel": "^32.5.5"
   }
 }
